        Reviewed by Hyatt.

http://bugs.webkit.org/show_bug.cgi?id=6170
        CSS1: Properties for :first-letter aren't recalculated on color change

        Mark styles with first-letter as unique.



Canonical link: https://commits.webkit.org/18296@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21964 268f45cc-cd09-0410-ab3c-d52691b4dbfc